syntax = "proto3";

option go_package = "rpc";

package bookstore;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/descriptor.proto";

message Book {
  string id = 1;
  string author = 2;
  string title = 3;
}

message ListBooksResponse {
  repeated Book books = 1;
}

message ListShelvesResponse {
  repeated Shelf shelves = 1;
}

message Shelf {
  string id = 1;
  string name = 2;
  string theme = 3;
}

message CreateShelfParameters {
  Shelf shelf = 1;
}

message GetShelfParameters {
  string shelf = 1;
}

message DeleteShelfParameters {
  string shelf = 1;
}

message ListBooksParameters {
  string shelf = 1;
}

message CreateBookParameters {
  string shelf = 1;
  Book book = 2;
}

message GetBookParameters {
  string shelf = 1;
  string book = 2;
}

message DeleteBookParameters {
  string shelf = 1;
  string book = 2;
}

service Bookstore {
  rpc ListShelves ( google.protobuf.Empty ) returns ( ListShelvesResponse ) {
    option (google.api.http) = { get:"/shelves"  };
  }

  rpc CreateShelf ( CreateShelfParameters ) returns ( Shelf ) {
    option (google.api.http) = { post:"/shelves" body:"shelf"  };
  }

  rpc DeleteShelves ( google.protobuf.Empty ) returns ( google.protobuf.Empty ) {
    option (google.api.http) = { delete:"/shelves"  };
  }

  rpc GetShelf ( GetShelfParameters ) returns ( Shelf ) {
    option (google.api.http) = { get:"/shelves/{shelf}"  };
  }

  rpc DeleteShelf ( DeleteShelfParameters ) returns ( google.protobuf.Empty ) {
    option (google.api.http) = { delete:"/shelves/{shelf}"  };
  }

  rpc ListBooks ( ListBooksParameters ) returns ( ListBooksResponse ) {
    option (google.api.http) = { get:"/shelves/{shelf}/books"  };
  }

  rpc CreateBook ( CreateBookParameters ) returns ( Book ) {
    option (google.api.http) = { post:"/shelves/{shelf}/books" body:"book"  };
  }

  rpc GetBook ( GetBookParameters ) returns ( Book ) {
    option (google.api.http) = { get:"/shelves/{shelf}/books/{book}"  };
  }

  rpc DeleteBook ( DeleteBookParameters ) returns ( google.protobuf.Empty ) {
    option (google.api.http) = { delete:"/shelves/{shelf}/books/{book}"  };
  }
}

